test fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,17 @@ body {
   margin: 0 auto;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
   font-family: "Josefin Sans", sans-serif;
   background-color: #5b7768;
 }
-
+@media (max-width: 1050px) {
+  html,
+  body {
+    overflow-y: auto;
+  }
+}
 #root {
   margin: 0 auto;
   height: 100vh;
@@ -600,7 +606,7 @@ body {
     }
   }
 }
-@media (max-width: 1100px) {
+@media (max-width: 1050px) {
   .App {
     overflow-y: auto;
   }
